--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -50,6 +50,21 @@
             .box select option {
                 padding: 30px;
             }
+
+        input[type="checkbox"]:after {
+            border: 1px solid #7571f9 !important;
+            margin: auto !important;
+        }
+
+        #DataTable_filter .form-control {
+            border: 1px solid #7571f9;
+            border-radius: 0.5rem;
+        }
+
+        #DataTable_length .form-control {
+            border: 1px solid #7571f9;
+            border-radius: 0.5rem;
+        }
     </style>
 </head>
 
@@ -165,13 +180,13 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-controller="BangLuong" asp-action="Index">
-                            <i class="icon-note menu-icon"></i> <span class="nav-text">Bảng lương</span>
+                        <a asp-controller="DuAn" asp-action="Index">
+                            <i class="icon-people menu-icon"></i> <span class="nav-text">Quản lý dự án</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="icon-people menu-icon"></i> <span class="nav-text">Users</span>
+                        <a asp-controller="BangLuong" asp-action="Index">
+                            <i class="icon-note menu-icon"></i> <span class="nav-text">Bảng lương</span>
                         </a>
                     </li>
                 </ul>
@@ -205,7 +220,29 @@
     <!--**********************************
         Scripts
     ***********************************-->
-
+    <style>
+        
+    </style>
+    <script>
+        function checkDel() {
+            if ($("#checkBoxAll").is(":checked")) {
+                $(".chkCheckBoxId").prop("checked", true);
+                $("#btnDel").prop("disabled", false);
+            }
+            else {
+                $(".chkCheckBoxId").prop("checked", false);
+                $("#btnDel").prop("disabled", true);
+            }
+        }
+        function checkSingleDel() {
+            if ($(".chkCheckBoxId").is(":checked")) {
+                $("#btnDel").prop("disabled", false);
+            }
+            else {
+                $("#btnDel").prop("disabled", true);
+            }
+        }
+    </script>
 
     <script src="~/plugins/common/common.min.js"></script>
     <script src="~/js/custom.min.js"></script>
