--- a/CleanArch/WebApplication1/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@using Application.DTOs
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
+@model Dashboard
 
 <div class="content-body">
     <div class="container-fluid mt-3">
@@ -10,11 +11,11 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="card gradient-1">
                     <div class="card-body">
-                        <h3 class="card-title text-white">All Products</h3>
+                        <h3 class="card-title text-white">Tổng nhân viên</h3>
                         <div class="d-inline-block">
-                            <h2 class="text-white"><?php echo $count_pro?></h2>
+                            <h2 class="text-white"></h2>
                             <a href="products.php">
-                                <p class="text-white mb-0">See detail...</p>
+                                <p class="text-white mb-0">@Model.TongNhanVien</p>
                             </a>
                         </div>
                         <span class="float-right display-5 opacity-5"><i class="fa fa-shopping-cart"></i></span>
@@ -24,11 +25,11 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="card gradient-2">
                     <div class="card-body">
-                        <h3 class="card-title text-white">All Categories</h3>
+                        <h3 class="card-title text-white">Tổng lương nhân viên</h3>
                         <div class="d-inline-block">
-                            <h2 class="text-white"><?php echo $count_cat?></h2>
+                            <h2 class="text-white"></h2>
                             <a href="categories.php">
-                                <p class="text-white mb-0">See detail...</p>
+                                <p class="text-white mb-0">@Model.TongLuongNhanVienThangTruoc</p>
                             </a>
                         </div>
                         <span class="float-right display-5 opacity-5"><i class="fa fa-th-large"></i></span>
@@ -38,11 +39,11 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="card gradient-3">
                     <div class="card-body">
-                        <h3 class="card-title text-white">All Sub-Categories</h3>
+                        <h3 class="card-title text-white">Nhân viên làm việc</h3>
                         <div class="d-inline-block">
-                            <h2 class="text-white"><?php echo $count_scat?></h2>
+                            <h2 class="text-white"></h2>
                             <a href="sub-categories.php">
-                                <p class="text-white mb-0">See detail...</p>
+                                <p class="text-white mb-0">@Model.SoNhanVienLamHomQua</p>
                             </a>
                         </div>
                         <span class="float-right display-5 opacity-5"><i class="fa fa-tags"></i></span>
@@ -52,11 +53,11 @@
             <div class="col-lg-3 col-sm-6">
                 <div class="card gradient-4">
                     <div class="card-body">
-                        <h3 class="card-title text-white">All Customers</h3>
+                        <h3 class="card-title text-white">Nhân viên nghỉ</h3>
                         <div class="d-inline-block">
-                            <h2 class="text-white"><?php echo $count_cus?></h2>
+                            <h2 class="text-white"></h2>
                             <a href="sub-user.php">
-                                <p class="text-white mb-0">See detail...</p>
+                                <p class="text-white mb-0">@Model.SoNhanVienNghiHomQua</p>
                             </a>
                         </div>
                         <span class="float-right display-5 opacity-5"><i class="fa fa-users"></i></span>
@@ -69,37 +70,41 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <h3>New Orders</h3>
+                            <h3>Dự án đang tiến hành</h3>
                         </div>
                         <div class="table-responsive">
                             <table id="table-order" class="table table-bordered table-striped table-hover">
                                 <thead>
                                     <tr>
-                                        <th style="width: 10%">Order ID</th>
-                                        <th style="width: 20%">Customer Name</th>
-                                        <th style="width: 30%">Address</th>
-                                        <th style="width: 15%">Buy Date</th>
-                                        <th style="width: 15%">Status</th>
-                                        <th style="width: 5%">Details</th>
-                                        <th style="width: 5%">Delete</th>
+                                        <th style="width: 10%">Mã dự án</th>
+                                        <th style="width: 15%">Tên dự án</th>
+                                        <th style="width: 15%">Ngày bắt đầu</th>
+                                        <th style="width: 15%">Ngày kết thúc</th>
+                                        <th style="width: 15%">Thưởng</th>
+                                        <th style="width: 15%">Số lượng nhân viên</th>
+                                        <th style="width: 15%">Tiến độ thực hiện</th>
                                     </tr>
                                 </thead>
                                 <tbody id="table-order-body">
-                                    <tr>
-                                        <th><?php echo $order_id?></th>
-                                        <td><?php echo $cus_id?></td>
-                                        <td><?php echo $cus_address?></td>
-                                        <td><?php echo $buy_date?></td>
-                                        <td>
-                                            <a href="index.php?upstatus=<?php echo $order_id?>&status=<?php echo $order_status?>">
-                                                <button type="button" class="btn btn-info">New Order</button>
-                                                <button type="button" class="btn btn-danger">Delivery</button>
-                                                <button type="button" class="btn btn-success" style="color:#fff;" disabled>Delivered</button>                                                
-                                            </a>
-                                        </td>
-                                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong<?php echo $order_id?>"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button></td>
-                                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal<?php echo $order_id?>"><i class="fa fa-trash-o"></i></button></td>
-                                    </tr>
+                                    @{ int i = 0;}
+                                    @foreach (DuAnDTO duAn in Model.DuAns)
+                                    {
+                                        i++;
+                                        int progress = (DateTime.Now - (DateTime)duAn.NgayBatDau).Days * 100 / ((DateTime)duAn.NgayKetThuc - (DateTime)duAn.NgayBatDau).Days;
+                                        <tr>
+                                            <th>@duAn.DuAnId</th>
+                                            <td>@duAn.TenDuAn</td>
+                                            <td>@duAn.NgayBatDau</td>
+                                            <td>@duAn.NgayKetThuc</td>
+                                            <td>@duAn.ThuongDuAn</td>
+                                            <td>@duAn.SoLuongNhanVien</td>
+                                            <td>
+                                                <div style="width: 100%; height: 15px; background: #808080; border-radius: 100px">
+                                                    <div id="#@i" style="width: @progress%; height: 15px; background: #00ff00; transition: width 5s; border-radius: 100px"></div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
