--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Index.cshtml
@@ -23,7 +23,7 @@
                         @if (ViewBag.Update == "yes")
                         {
                             <div class="card-title mb-3">
-                                <h4>SỬA PHÒNG BAN</h4>
+                                <h3>SỬA PHÒNG BAN</h3>
                             </div>
                             <form method="post" asp-controller="PhongBan" asp-action="Update">
                                 <div class="form-group">
@@ -39,13 +39,13 @@
                                     <input value="@Model.phongBanDTO.SDTPhongBan" type="number" name="SDTPhongBan" class="form-control" placeholder="Nhấp số điện thoại.." required>
                                 </div>
                                 <input type="submit" value="Sửa thông tin" name="sua" class="btn btn-primary">
-                                <a asp-controller="PhongBan" asp-action="Index" style="float: right;"><button type="button" class="btn btn-primary">Hủy</button></a>
+                                <a asp-controller="PhongBan" asp-action="Index" style="float: right;"><button type="button" class="btn btn-danger">Hủy</button></a>
                             </form>
                         }
                         else
                         {
                             <div class="card-title mb-3">
-                                <h4>THÊM PHÒNG BAN</h4>
+                                <h3>THÊM PHÒNG BAN</h3>
                             </div>
                             <form method="post" asp-controller="PhongBan" asp-action="AddPB">
                                 <div class="form-group">
@@ -76,7 +76,7 @@
                     <div class="card-body">
                         <div class="card-title">
                             <div class="col-md-12 mb-4">
-                                <h4>DANH SÁCH PHÒNG BAN</h4>
+                                <h3>DANH SÁCH PHÒNG BAN</h3>
                                 @if (ViewBag.ErrorRemove == "yes")
                                 {
                                     <p class="td-center" style="color:red;">@ViewBag.Remove</p>
@@ -179,12 +179,12 @@
                                                 <div class="modal-dialog" role="document">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
-                                                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn<br>xoá phòng ban @phongban.TenPhongBan?</h3>
+                                                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn xoá<br>phòng ban @phongban.TenPhongBan?</h3>
                                                         </div>
                                                         <div class="modal-footer" style="margin: auto;">
-                                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Hủy</button>
                                                             <form method="post" asp-controller="PhongBan" asp-action="Remove">
-                                                                <button name="id" type="submit" class="btn btn-danger" value="@phongban.PhongBanId">Yes, delete it !</button>
+                                                                <button name="id" type="submit" class="btn btn-danger" value="@phongban.PhongBanId">Xóa phòng ban</button>
                                                             </form>
                                                         </div>
                                                     </div>
