--- a/CleanArch/WebApplication1/Areas/Admin/Views/Duan/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Duan/Index.cshtml
@@ -91,11 +91,11 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="tenduan">Tên dự án</label>
-                                    <input type="text" placeholder="Nhập tên dự án" class="form-control" name="TenDuAn" required>
+                                    <input type="text" placeholder="Nhập tên dự án..." class="form-control" name="TenDuAn" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="thuongduan">Thưởng dự án</label>
-                                    <input type="number" placeholder="Nhập thưởng dự án" class="form-control" name="ThuongDuAn" min="0" required>
+                                    <input type="number" placeholder="Nhập thưởng dự án..." class="form-control" name="ThuongDuAn" min="0" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="ngaybatdau">Ngày bắt đầu</label>
@@ -113,28 +113,28 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <h4>Thêm nhân viên vào dự án</h4>
+                            <h3>THÊM NHÂN VIÊN VÀO DỰ ÁN</h3>
                         </div>
-                        <form action="#" method="post">
+                        <form method="post" asp-controller="DuAn" asp-action="AddNVDA">
                             <div class="form-group">
-                                <label for="maduan">Mã dự án</label>
-                                <input type="text" placeholder="" class="form-control" name="maduan" value="" required>
+                                <label for="DuAnId">Mã dự án</label>
+                                <input type="text" placeholder="Nhập mã dự án..." class="form-control" name="DuAnId" required>
                             </div>
                             <div class="form-group">
-                                <label for="manhanvien">Mã nhân viên</label>
-                                <input type="text" placeholder="" class="form-control" name="edit-cat-name" value="" required>
+                                <label for="NhanVienId">Mã nhân viên</label>
+                                <input type="text" placeholder="Nhập mã nhân viên..." class="form-control" name="NhanVienId" required>
                             </div>
                             <div class="form-group">
-                                <label for="phantram">Phần trăm tham dự</label>
+                                <label for="PhanTramCV">Phần trăm tham dự</label>
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder="">
+                                    <input type="number" class="form-control" placeholder="Nhập phần trăm tham dự..." name="PhanTramCV" min="1" max="100">
                                     <div class="input-group-append">
                                         <span class="input-group-text">%</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Thêm nhân viên" name="edit-category" class="btn btn-primary">
+                                <input type="submit" value="Thêm nhân viên" name="" class="btn btn-primary">
                             </div>
                         </form>
                     </div>
