thêm đữ liệu vào database từ file seedData.cs
16/12/2020

--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/AddNV.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/AddNV.cshtml
@@ -77,6 +77,10 @@
                                                         <option value="">-- Chọn phòng ban --</option>
                                                         @foreach (PhongBanDTO phongBanDTO in Model.phongBanDTOs)
                                                         {
+                                                            if(phongBanDTO.PhongBanId == "null")
+                                                            {
+                                                                continue;
+                                                            }
                                                             <option value="@phongBanDTO.PhongBanId">@phongBanDTO.TenPhongBan</option>
                                                         }
                                                     </select>
