--- a/CleanArch/WebApplication1/Areas/Admin/Views/Duan/DuanDetail.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Duan/DuanDetail.cshtml
@@ -37,7 +37,7 @@
                             </div>
                             <div class="col-md-6">
                                 <button id="btnDel" type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirmDel" style="float:right;" disabled>
-                                    <i class="fa fa-trash-o"></i><span style="margin-left: 10px">Xoá nhân viên khỏi phòng ban</span>
+                                    <i class="fa fa-trash-o"></i><span style="margin-left: 10px">Xoá nhân viên khỏi dự án</span>
                                 </button>
                             </div>
                         </div>
@@ -58,7 +58,7 @@
                                 <label class="modal-style">Ngày kết thúc dự án: </label><span style="margin-left: 20px;">@Model.duAnDTO.NgayKetThuc</span>
                             </div>
                         </div>
-                        <form>
+                        <form method="post" asp-controller="DuAn" asp-action="RemoveMultiNVDA">
                             <div class="table-responsive">
                                 <table id="DataTable" class="table table-bordered table-hover zero-configuration">
                                     <thead>
@@ -95,7 +95,7 @@
                                                 <td>@nhanVienDuAn.PhanTramCV</td>
                                                 <td><a><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@("suaNVDA"+nhanVienDuAn.NhanVienDuAnId)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button></a></td>
                                                 <td class="td-center">
-                                                    <input type="checkbox" name="NhanVienId" value="" class="custom-checkbox chkCheckBoxId" onclick="checkSingleDel()" />
+                                                    <input type="checkbox" name="NhanVienDuAnId" value="@nhanVienDuAn.NhanVienDuAnId" class="custom-checkbox chkCheckBoxId" onclick="checkSingleDel()" />
                                                 </td>
                                             </tr>
                                         }
@@ -106,7 +106,7 @@
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto; text-align: center;">Bạn chắc chắn muốn nhân viên đã chọn khỏi phòng ban?</h3>
+                                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto; text-align: center;">Bạn chắc chắn muốn xóa nhân viên đã chọn khỏi dự án?</h3>
                                         </div>
                                         <div class="modal-footer" style="margin: auto;">
                                             <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
