--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
@@ -91,11 +91,11 @@
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h3 class="modal-title" id="exampleModalLabel" style="margin: auto; text-align: center;">Bạn chắc chắn muốn nhân viên đã chọn khỏi phòng ban?</h3>
+                                                <h3 class="modal-title" id="exampleModalLabel" style="margin: auto; text-align: center;">Bạn chắc chắn muốn xóa nhân viên đã chọn khỏi phòng ban?</h3>
                                             </div>
                                             <div class="modal-footer" style="margin: auto;">
                                                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                                                    <button type="submit" class="btn btn-danger" value="Delete">Yes, delete it !</button>
+                                                <button type="submit" class="btn btn-danger" value="Delete">Yes, delete it !</button>
                                             </div>
                                         </div>
                                     </div>
